lab 6: Assignment 1:Student REST API